compile_log_16.txt
[  0%] Building CUDA object CMakeFiles/cuda_zstd_static.dir/src/cuda_zstd_fse_encoding_kernel.cu.o
/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/cuda_zstd_fse_encoding_kernel.cu(89): error: identifier "tid" is undefined
    if (tid == 0) {
        ^

1 error detected in the compilation of "/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/cuda_zstd_fse_encoding_kernel.cu".
gmake[3]: *** [CMakeFiles/cuda_zstd_static.dir/build.make:150: CMakeFiles/cuda_zstd_static.dir/src/cuda_zstd_fse_encoding_kernel.cu.o] Error 2
gmake[2]: *** [CMakeFiles/Makefile2:259: CMakeFiles/cuda_zstd_static.dir/all] Error 2
gmake[1]: *** [CMakeFiles/Makefile2:500: CMakeFiles/test_correctness.dir/rule] Error 2
gmake: *** [Makefile:296: test_correctness] Error 2
